<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.calendar.CalendarFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/calendar_title"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/calendarContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_calendar"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <LinearLayout
            android:id="@+id/month_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_previous_month"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/iv_previous_month_content_description"
                android:src="@drawable/ic_arrow_left"
                app:tint="@color/dark_gray" />

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="October 2025" />

            <ImageView
                android:id="@+id/iv_next_month"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/iv_next_month_content_description"
                android:src="@drawable/ic_arrow_right"
                app:tint="@color/dark_gray" />

        </LinearLayout>

        <GridLayout
            android:id="@+id/grid_weekdays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:columnCount="7">

            <TextView
                style="@style/WeekDayLabel"
                android:layout_margin="4dp"
                android:text="@string/sunday" />

            <TextView
                style="@style/WeekDayLabel"
                android:layout_margin="4dp"
                android:text="@string/monday" />

            <TextView
                style="@style/WeekDayLabel"
                android:layout_margin="4dp"
                android:text="@string/tuesday" />

            <TextView
                style="@style/WeekDayLabel"
                android:layout_margin="4dp"
                android:text="@string/wednesday" />

            <TextView
                style="@style/WeekDayLabel"
                android:layout_margin="4dp"
                android:text="@string/tuesday" />

            <TextView
                style="@style/WeekDayLabel"
                android:layout_margin="4dp"
                android:text="@string/friday" />

            <TextView
                style="@style/WeekDayLabel"
                android:layout_margin="4dp"
                android:text="@string/saturday" />

        </GridLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="7" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>