<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.goals.GoalsSecondFragment">

    <!-- 1. Заголовок (такой же, как на прошлом экране) -->
    <TextView
        android:id="@+id/tv_title_goal_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:text="@string/define_goals"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <View
        android:id="@+id/top_center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.4" />

    <!-- 2. Подзаголовок -->
    <TextView
        android:id="@+id/tv_subtitle_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/how_many_kg_lose_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/black" />


    <!-- 3. Поле ввода веса с суффиксом "кг" -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_target_weight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/default_component_background"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="@drawable/text_input_stroke_selector"
        app:hintTextColor="@drawable/text_input_hint_selector"
        app:suffixText="@string/kg_suffix"
        app:suffixTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_target_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="0"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/medium_spacer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24sp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/active_component_background"
        android:paddingVertical="10dp"
        android:text="@string/continue_button_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="12dp" />

</LinearLayout>